Qute - introduce strict rendering
    - i.e. if any expression is evaluated to "not found" value a
    TemplateException is thrown and rendering is aborted
    - it's enabled by default
    - it can be disabled via io.quarkus.qute.strict-rendering=false