@@ -3,16 +3,17 @@ package io.quarkus.qute.runtime;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Optional;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.enterprise.event.Event;
 import javax.enterprise.inject.Produces;
-import javax.inject.Inject;
 import javax.inject.Singleton;
+import javax.interceptor.Interceptor;
 
 import org.jboss.logging.Logger;
 
@@ -20,47 +21,47 @@ import io.quarkus.arc.Arc;
 import io.quarkus.arc.InstanceHandle;
 import io.quarkus.qute.Engine;
 import io.quarkus.qute.EngineBuilder;
-import io.quarkus.qute.Escaper;
-import io.quarkus.qute.Expression;
+import io.quarkus.qute.HtmlEscaper;
 import io.quarkus.qute.NamespaceResolver;
-import io.quarkus.qute.RawString;
 import io.quarkus.qute.ReflectionValueResolver;
-import io.quarkus.qute.ResultMapper;
-import io.quarkus.qute.Results.Result;
+import io.quarkus.qute.Resolver;
+import io.quarkus.qute.Results;
 import io.quarkus.qute.TemplateLocator.TemplateLocation;
-import io.quarkus.qute.TemplateNode.Origin;
 import io.quarkus.qute.UserTagSectionHelper;
 import io.quarkus.qute.ValueResolver;
 import io.quarkus.qute.ValueResolvers;
 import io.quarkus.qute.Variant;
+import io.quarkus.qute.runtime.QuteRecorder.QuteContext;
+import io.quarkus.runtime.LaunchMode;
+import io.quarkus.runtime.Startup;
 
+@Startup(Interceptor.Priority.PLATFORM_BEFORE)
 @Singleton
 public class EngineProducer {
 
     public static final String INJECT_NAMESPACE = "inject";
 
+    private static final String TAGS = "tags/";
+
     private static final Logger LOGGER = Logger.getLogger(EngineProducer.class);
 
-    @Inject
-    Event<EngineBuilder> event;
+    private final Engine engine;
+    private final ContentTypes contentTypes;
+    private final List<String> tags;
+    private final List<String> suffixes;
+    private final String basePath;
+    private final String tagPath;
 
-    private Engine engine;
-    private List<String> tags;
+    public EngineProducer(QuteContext context, QuteConfig config, QuteRuntimeConfig runtimeConfig,
+            Event<EngineBuilder> builderReady, Event<Engine> engineReady, ContentTypes contentTypes, LaunchMode launchMode) {
+        this.contentTypes = contentTypes;
+        this.suffixes = config.suffixes;
+        this.basePath = "templates/";
+        this.tagPath = basePath + TAGS;
+        this.tags = context.getTags();
 
-    private List<String> suffixes;
-    private String basePath;
-    private String tagPath;
-
-    void init(QuteConfig config, List<String> resolverClasses, List<String> templatePaths, List<String> tags) {
-        if (engine != null) {
-            LOGGER.warn("Qute already initialized!");
-            return;
-        }
-        LOGGER.debugf("Initializing Qute with: %s", resolverClasses);
-
-        suffixes = config.suffixes;
-        basePath = "templates/";
-        tagPath = basePath + "tags/";
+        LOGGER.debugf("Initializing Qute [templates: %s, tags: %s, resolvers: %s", context.getTemplatePaths(), tags,
+                context.getResolverClasses());
 
         EngineBuilder builder = Engine.builder()
                 .addDefaultSectionHelpers();
@@ -75,57 +76,86 @@ public class EngineProducer {
         builder.addValueResolver(ValueResolvers.mapEntryResolver());
         // foo.string.raw returns a RawString which is never escaped
         builder.addValueResolver(ValueResolvers.rawResolver());
+        builder.addValueResolver(ValueResolvers.logicalAndResolver());
+        builder.addValueResolver(ValueResolvers.logicalOrResolver());
+        builder.addValueResolver(ValueResolvers.orEmpty());
+        // Note that arrays are handled specifically during validation
+        builder.addValueResolver(ValueResolvers.arrayResolver());
+
+        // Enable/disable strict rendering
+        if (runtimeConfig.strictRendering) {
+            builder.strictRendering(true);
+        } else {
+            builder.strictRendering(false);
+            // If needed use a specific result mapper for the selected strategy  
+            if (runtimeConfig.propertyNotFoundStrategy.isPresent()) {
+                switch (runtimeConfig.propertyNotFoundStrategy.get()) {
+                    case THROW_EXCEPTION:
+                        builder.addResultMapper(new PropertyNotFoundThrowException());
+                        break;
+                    case NOOP:
+                        builder.addResultMapper(new PropertyNotFoundNoop());
+                        break;
+                    case OUTPUT_ORIGINAL:
+                        builder.addResultMapper(new PropertyNotFoundOutputOriginal());
+                        break;
+                    default:
+                        // Use the default strategy
+                        break;
+                }
+            } else {
+                // Throw an expection in the development mode
+                if (launchMode == LaunchMode.DEVELOPMENT) {
+                    builder.addResultMapper(new PropertyNotFoundThrowException());
+                }
+            }
+        }
 
         // Escape some characters for HTML templates
-        Escaper htmlEscaper = Escaper.builder().add('"', "&quot;").add('\'', "&#39;")
-                .add('&', "&amp;").add('<', "&lt;").add('>', "&gt;").build();
-        builder.addResultMapper(new ResultMapper() {
-
-            @Override
-            public boolean appliesTo(Origin origin, Object result) {
-                return !(result instanceof RawString)
-                        && origin.getVariant().filter(EngineProducer::requiresDefaultEscaping).isPresent();
-            }
-
-            @Override
-            public String map(Object result, Expression expression) {
-                return htmlEscaper.escape(result.toString());
-            }
-        });
+        builder.addResultMapper(new HtmlEscaper());
 
         // Fallback reflection resolver
         builder.addValueResolver(new ReflectionValueResolver());
 
+        // Remove standalone lines if desired
+        builder.removeStandaloneLines(runtimeConfig.removeStandaloneLines);
+
         // Allow anyone to customize the builder
-        event.fire(builder);
+        builderReady.fire(builder);
 
         // Resolve @Named beans
         builder.addNamespaceResolver(NamespaceResolver.builder(INJECT_NAMESPACE).resolve(ctx -> {
             InstanceHandle<Object> bean = Arc.container().instance(ctx.getName());
-            return bean.isAvailable() ? bean.get() : Result.NOT_FOUND;
+            return bean.isAvailable() ? bean.get() : Results.NotFound.from(ctx);
         }).build());
 
         // Add generated resolvers
-        for (String resolverClass : resolverClasses) {
-            builder.addValueResolver(createResolver(resolverClass));
+        for (String resolverClass : context.getResolverClasses()) {
+            Resolver resolver = createResolver(resolverClass);
+            if (resolver instanceof NamespaceResolver) {
+                builder.addNamespaceResolver((NamespaceResolver) resolver);
+            } else {
+                builder.addValueResolver((ValueResolver) resolver);
+            }
             LOGGER.debugf("Added generated value resolver: %s", resolverClass);
         }
         // Add tags
-        this.tags = tags;
         for (String tag : tags) {
             // Strip suffix, item.html -> item
             String tagName = tag.contains(".") ? tag.substring(0, tag.lastIndexOf('.')) : tag;
-            LOGGER.debugf("Registered UserTagSectionHelper for %s", tagName);
-            builder.addSectionHelper(new UserTagSectionHelper.Factory(tagName));
+            String tagTemplateId = TAGS + tagName;
+            LOGGER.debugf("Registered UserTagSectionHelper for %s [%s]", tagName, tagTemplateId);
+            builder.addSectionHelper(new UserTagSectionHelper.Factory(tagName, tagTemplateId));
         }
         // Add locator
         builder.addLocator(this::locate);
         engine = builder.build();
 
         // Load discovered templates
-        for (String path : templatePaths) {
+        for (String path : context.getTemplatePaths()) {
             engine.getTemplate(path);
         }
+        engineReady.fire(engine);
     }
 
     @Produces
@@ -142,19 +172,16 @@ public class EngineProducer {
         return tagPath;
     }
 
-    List<String> getSuffixes() {
-        return suffixes;
-    }
-
-    private ValueResolver createResolver(String resolverClassName) {
+    private Resolver createResolver(String resolverClassName) {
         try {
             Class<?> resolverClazz = Thread.currentThread()
                     .getContextClassLoader().loadClass(resolverClassName);
-            if (ValueResolver.class.isAssignableFrom(resolverClazz)) {
-                return (ValueResolver) resolverClazz.newInstance();
+            if (Resolver.class.isAssignableFrom(resolverClazz)) {
+                return (Resolver) resolverClazz.getDeclaredConstructor().newInstance();
             }
-            throw new IllegalStateException("Not a value resolver: " + resolverClassName);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            throw new IllegalStateException("Not a resolver: " + resolverClassName);
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | IllegalArgumentException
+                | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new IllegalStateException("Unable to create resolver: " + resolverClassName, e);
         }
     }
@@ -165,25 +192,21 @@ public class EngineProducer {
      */
     private Optional<TemplateLocation> locate(String path) {
         URL resource = null;
-        // First try to locate a tag template
-        if (tags.stream().anyMatch(tag -> tag.startsWith(path))) {
-            LOGGER.debugf("Locate tag for %s", path);
-            resource = locatePath(tagPath + path);
+        String templatePath = basePath + path;
+        LOGGER.debugf("Locate template for %s", templatePath);
+        resource = locatePath(templatePath);
+        if (resource == null) {
             // Try path with suffixes
             for (String suffix : suffixes) {
-                resource = locatePath(tagPath + path + "." + suffix);
+                templatePath = basePath + path + "." + suffix;
+                resource = locatePath(templatePath);
                 if (resource != null) {
                     break;
                 }
             }
         }
-        if (resource == null) {
-            String templatePath = basePath + path;
-            LOGGER.debugf("Locate template for %s", templatePath);
-            resource = locatePath(templatePath);
-        }
         if (resource != null) {
-            return Optional.of(new ResourceTemplateLocation(resource, guessVariant(path)));
+            return Optional.of(new ResourceTemplateLocation(resource, guessVariant(templatePath)));
         }
         return Optional.empty();
     }
@@ -196,20 +219,9 @@ public class EngineProducer {
         return cl.getResource(path);
     }
 
-    static Variant guessVariant(String path) {
-        // TODO we need a proper way to detect the variant
-        int suffixIdx = path.lastIndexOf('.');
-        if (suffixIdx != -1) {
-            String suffix = path.substring(suffixIdx);
-            return new Variant(null, VariantTemplateProducer.parseMediaType(suffix), null);
-        }
-        return null;
-    }
-
-    static boolean requiresDefaultEscaping(Variant variant) {
-        return variant.mediaType != null
-                ? (Variant.TEXT_HTML.equals(variant.mediaType) || Variant.TEXT_XML.equals(variant.mediaType))
-                : false;
+    Variant guessVariant(String path) {
+        // TODO detect locale and encoding
+        return Variant.forContentType(contentTypes.getContentType(path));
     }
 
     static class ResourceTemplateLocation implements TemplateLocation {
@@ -225,7 +237,7 @@ public class EngineProducer {
         @Override
         public Reader read() {
             try {
-                return new InputStreamReader(resource.openStream(), Charset.forName("utf-8"));
+                return new InputStreamReader(resource.openStream(), StandardCharsets.UTF_8);
             } catch (IOException e) {
                 return null;
             }
